# ai-assistant

./: .gitignore  1.py  LICENSE  NOTICE  README.md  TODO.txt  audit.ps1.txt  config.example.yaml  config.yaml  context_build.md  context_build_compact.md  context_build_rules.md  deep_audit.py  diagnose.bat  diagnose.ps1  env.example  launcher.py  main.py  open_cmd.bat  open_powershell.bat  pyproject.toml  run.py  run_scripts.py  run_servers.py  structure.txt
adapters/: __init__.py  chunker_simple.py  embedder_mock.py  embedder_openai_compatible.py  llm_mock.py  llm_openai_compatible.py  memory_sqlite.py  reranker_api.py  reranker_dummy.py  storage_sqlite.py  tools_calculator.py  transport_fastapi.py  vector_store_faiss.py  vector_store_memory.py  vision_clip_local.py  voice_piper.py  voice_whisper_local.py  voice_whispercpp.py
api/: admin.py  deps.py  lifespan.py  router.py  security.py
chat_exports/personal/: test.md
core/: __init__.py  config.py  io_utils.py  logger.py  metrics.py  pipeline.py  registry.py  retry.py  tool_registry.py  utils.py
core/domain/: __init__.py  documents.py  errors.py  messages.py  pipeline.py
core/ports/: chunker.py  embedder.py  events.py  llm.py  memory.py  modality.py  reranker.py  storage.py  tools.py  transport.py  vector_store.py  vision.py  voice.py
core/prompts/v1/: rag_creative.j2  rag_strict.j2  voice_transcribe.j2
dev/: AI_RULES.md  ERROR_TAXONOMY.md  README_DEV.md  TODO.md  TODO_DONE.md  ci.yml  launcher.py  structure.txt
dev/scripts/: audit_project.py  check_all.py  check_llm.py  check_mutations.py  check_mypy.py  check_orphans.py  check_rag.py  check_ruff.py  check_smoke.py  check_vulture.py  context_build.py  error_taxonomy_build.py  pre_commit_check.py  structure.py
dev/tests/: __init__.py  config.test.yaml  conftest.py  test_adapters_integration.py  test_api_deps.py  test_api_e2e.py  test_chat_manager_direct.py  test_contracts.py  test_core_critical.py  test_fuzz.py  test_lifespan.py  test_malformed_sse.py  test_metrics.py  test_pipeline_frozen_compat.py  test_rag_pipeline.py  test_resilience.py  test_router_compile.py  test_scripts_and_platform.py  test_security.py  test_smoke_pyproject.py  test_stress.py  test_tokenizer.py
docs/: ai_rules.md  architectural_strategy.md  drift.md  error_taxonomy.md  future.md  readme_dev.md  test.txt  todo.md  todo_done.md
features/: __init__.py
features/chat/: __init__.py  handlers.py  manager.py  schemas.py
features/image_analysis/: __init__.py  handlers.py  manager.py  schemas.py
features/rag/: __init__.py  handlers.py  manager.py  schemas.py
ops/scripts/: clean_cache.py  download_tokenizers.py  index_documents.py  start.py  stop.py
pipeline/: decorators.py  steps.py
scripts/: __init__.py  audit_project.py  check_all.py  check_llm.py  check_llm_ollama.py  check_mutations.py  check_mypy.py  check_rag.py  check_ruff.py  check_smoke.py  check_vulture.py  clean_cache.py  context_build.py  convert_models.py  download_tokenizers.py  error_taxonomy_build.py  index_documents.py  kill.py  launcher.py  open_shell.py  pre_commit_check.py  run_all_tests.py  setup.py  setup_venv_requirements.py  start.py  stop.py  structure.py  test.txt
src/ai_assistant/: __init__.py  main.py
src/ai_assistant/adapters/: __init__.py  _http.py  _registry.py  char_fallback_tokenizer.py  chunker_simple.py  embedder_mock.py  embedder_openai_compatible.py  factory.py  llm_mock.py  llm_openai_compatible.py  memory_sqlite.py  reranker_api.py  reranker_dummy.py  reranker_local.py  reranker_null.py  storage_sqlite.py  tiktoken_tokenizer.py  tools_calculator.py  transport_fastapi.py  vector_store_faiss.py  vector_store_memory.py  vision_clip_local.py  voice_piper.py  voice_whisper_local.py  voice_whispercpp.py
src/ai_assistant/api/: __init__.py  admin.py  deps.py  lifespan.py  middleware.py  router.py  security.py  static.py
src/ai_assistant/core/: __init__.py  circuit_breaker.py  config.py  constants.py  io_utils.py  logger.py  metrics.py  pipeline.py  pipeline_steps.py  query_parser.py  registry.py  retry.py  task_registry.py  tool_registry.py  utils.py
src/ai_assistant/core/domain/: __init__.py  configs.py  documents.py  errors.py  messages.py  pipeline.py
src/ai_assistant/core/ports/: __init__.py  chunker.py  closable.py  embedder.py  initializable.py  llm.py  modality.py  reranker.py  storage.py  tokenizer.py  tools.py  vector_store.py  vision.py
src/ai_assistant/core/prompts/: __init__.py
src/ai_assistant/core/prompts/v1/: condense_question.j2  rag_creative.j2  rag_default.j2  rag_simple.j2  rag_strict.j2  summarize.j2
src/ai_assistant/features/chat/: handlers.py  manager.py  schemas.py
src/ai_assistant/features/image_analysis/: handlers.py  manager.py
src/ai_assistant/features/rag/: handlers.py  indexing.py  manager.py  schemas.py
src/ai_assistant/pipeline/: __init__.py  decorators.py  steps.py
src/ai_assistant/ui/: index.html
tests/: config.test.yaml  conftest.py  pytest.ini  test_adapters.py  test_adapters_integration.py  test_api.py  test_api_deps.py  test_api_e2e.py  test_chat.py  test_chat_manager_direct.py  test_config.py  test_contracts.py  test_core_critical.py  test_domain.py  test_e2e.py  test_edge_cases.py  test_fuzz.py  test_integration.py  test_lifespan.py  test_logger.py  test_malformed_sse.py  test_metrics.py  test_pipeline.py  test_prompts.py  test_properties.py  test_rag.py  test_rag_pipeline.py  test_resilience.py  test_retry.py  test_scripts_and_platform.py  test_security.py  test_smoke.py  test_smoke_pyproject.py  test_stateful_ports.py  test_static.py  test_stress.py  test_task_registry.py  test_tokenizer.py  test_utils.py  teststest_e2e.py
ui/: index.html
