[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-assistant"
version = "1.0.0"
description = "Модульный AI-фреймворк с неизменяемым ядром"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "numpy>=1.26.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "aiofiles>=23.2.1,<24.0.0",
    "tiktoken>=0.7.0,<1.0.0",
    "tokenizers>=0.19.0,<1.0.0",
    "jinja2>=3.1.3,<4.0.0",
    "sqlmodel>=0.0.18,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "respx>=0.21.0,<1.0.0",
    "ruff>=0.4.0,<1.0.0",
    "mypy>=1.10.0,<2.0.0",
    "types-PyYAML>=6.0.12,<7.0.0",
    "types-aiofiles>=23.2.0,<24.0.0",
    "pre-commit>=3.7.0,<4.0.0",
    "pytest-timeout>=2.3.0,<3.0.0",
    "mutmut>=2.4.0,<3.0.0",
    "hypothesis>=6.100.0,<7.0.0",
    "vulture>=2.11,<3.0.0",
]
faiss = [
    "faiss-cpu>=1.8.0,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_assistant*"]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = ["dev/", "ops/", "vendor/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ASYNC", "B", "SIM", "C4", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
exclude = ["dev/", "ops/", "vendor/"]
warn_return_any = false
disallow_untyped_calls = false
disallow_untyped_defs = false
warn_no_return = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "ai_assistant.api.security",
    "ai_assistant.pipeline.steps",
    "ai_assistant.features.chat.manager",
    "ai_assistant.adapters.*",
    "ai_assistant.core.utils",
]
warn_return_any = false
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["dev/tests"]
timeout = 240
addopts = "-m 'not online'"

[tool.mutmut]
paths_to_mutate = ["src/ai_assistant/core/", "src/ai_assistant/adapters/", "src/ai_assistant/features/", "src/ai_assistant/api/", "src/ai_assistant/pipeline/"]
pytest_add_cli_args_test_selection = ["dev/tests/"]
backup = false
