[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-assistant"
version = "1.0.0"
description = "Модульный AI-фреймворк с неизменяемым ядром"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "numpy>=1.26.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "aiofiles>=23.2.1,<24.0.0",
    "tiktoken>=0.7.0,<1.0.0",
    "tokenizers>=0.19.0,<1.0.0",
    "jinja2>=3.1.3,<4.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "anyio>=4.0.0,<5.0.0",
    "starlette>=0.36.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-timeout>=2.3.0,<3.0.0",
    "respx>=0.21.0,<1.0.0",
    "hypothesis>=6.100.0,<7.0.0",
    "ruff>=0.4.0,<1.0.0",
    "mypy>=1.10.0,<2.0.0",
    "types-PyYAML>=6.0.12,<7.0.0",
    "types-aiofiles>=23.2.0,<24.0.0",
    "packaging>=20.0,<30.0",
]
faiss = [
    "faiss-cpu>=1.8.0,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_assistant*"]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = ["scripts/", "tests/", "vendor/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ASYNC", "B", "SIM", "C4", "TCH"]
ignore = ["E501", "TC003", "TC001"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
exclude = ["scripts/", "tests/", "vendor/"]
warn_return_any = false
disallow_untyped_calls = false
disallow_untyped_defs = false
warn_no_return = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "ai_assistant.api.security",
    "ai_assistant.core.pipeline_steps",
    "ai_assistant.features.chat.manager",
    "ai_assistant.adapters.*",
    "ai_assistant.core.utils",
]
warn_return_any = false
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
minversion = "8.2"
addopts = "-ra -q --strict-markers --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "online: requires running server",
    "slow: takes >1s",
    "smoke: smoke tests",
    "contract: contract tests",
    "e2e: end-to-end tests",
    "integration: integration tests",
    "regression: regression tests",
]

[tool.mutmut]
paths_to_mutate = ["src/ai_assistant/core/", "src/ai_assistant/adapters/", "src/ai_assistant/features/", "src/ai_assistant/api/", "src/ai_assistant/pipeline/"]
pytest_add_cli_args_test_selection = ["tests/"]
backup = false

[tool.coverage.run]
branch = true
source = ["src/ai_assistant"]

[tool.coverage.report]
skip_covered = false
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
